to be pwaor not?

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,32 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#556cd6" />
   <meta name="description" content="Web site created using create-react-app" />
+  <!-- PWA -->
+  <link rel="shortcut icon" sizes="16x16" href="%PUBLIC_URL%/logo144.png">
+  <!-- Apple -->
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="My Remont 2020" />
+  <link rel="shortcut icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/logo192.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo192.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="%PUBLIC_URL%/logo192.png">
+  <link rel="apple-touch-icon-precomposed" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="screen-orientation" content="portrait" />
+  <!-- Windows Phone -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="msapplication-navbutton-color" content="#556cd6">
+  <meta name="msapplication-TileColor" content="#556cd6">
+  <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo144.png">
+  <meta name="application-name" content="My Remont 2020">
+  <meta name="msapplication-tooltip" content="My Remont 2020">
+  <meta name="msapplication-starturl" content="%PUBLIC_URL%/menu?utm_source=homescreen">
+  <meta name="msapplication-starturl" content="%PUBLIC_URL%/menu?utm_source=homescreen">
+  <!-- Safari: TODO -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
