--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <meta name="theme-color" content="#556cd6" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- PWA -->
   <link rel="shortcut icon" sizes="16x16" href="%PUBLIC_URL%/logo144.png">
   <!-- Apple -->
+  <meta name="apple-mobile-web-app-status-bar" content="#000" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
