design theme updated

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <meta name="theme-color" content="#556cd6" />
+  <meta name="theme-color" content="#22577a" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- PWA -->
   <link rel="shortcut icon" sizes="16x16" href="%PUBLIC_URL%/logo144.png">
@@ -23,8 +23,8 @@
   <meta name="screen-orientation" content="portrait" />
   <!-- Windows Phone -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="msapplication-navbutton-color" content="#556cd6">
-  <meta name="msapplication-TileColor" content="#556cd6">
+  <meta name="msapplication-navbutton-color" content="#22577a">
+  <meta name="msapplication-TileColor" content="#22577a">
   <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo144.png">
   <meta name="application-name" content="My Remont 2020">
   <meta name="msapplication-tooltip" content="My Remont 2020">
