--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <meta name="theme-color" content="#22577a" />
+  <meta name="theme-color" content="#008cff" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- PWA -->
   <link rel="shortcut icon" sizes="16x16" href="%PUBLIC_URL%/logo144.png">
